--- a/MobileApp/package.json
+++ b/MobileApp/package.json
@@ -14,6 +14,7 @@
     "@react-native/new-app-screen": "0.80.1",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
+    "@react-navigation/native-stack": "^7.3.21",
     "axios": "^1.10.0",
     "react": "19.1.0",
     "react-native": "0.80.1",
