--- a/server/.env
+++ b/server/.env
@@ -26,9 +26,9 @@ EMAIL_USER=st2874321@gmail.com
 EMAIL_PASS=your-16-digit-app-password
 EMAIL_SERVICE=gmail
 
-# # 數據庫配置 (未來使用)
-# DATABASE_URL=your-database-url
-# REDIS_URL=your-redis-url
+# 數據庫配置
+DATABASE_URL=your-database-url
+REDIS_URL=your-redis-url
 
 # 日誌配置
 LOG_LEVEL=info
