login and register integrated with DB

--- a/server/.env
+++ b/server/.env
@@ -27,7 +27,7 @@ EMAIL_PASS=your-16-digit-app-password
 EMAIL_SERVICE=gmail
 
 # 數據庫配置
-DATABASE_URL=your-database-url
+DATABASE_URL="postgresql://postgres:1234@localhost:5432/corent_manager?schema=public"
 REDIS_URL=your-redis-url
 
 # 日誌配置
