--- a/MobileApp/package.json
+++ b/MobileApp/package.json
@@ -20,10 +20,11 @@
     "react": "19.1.0",
     "react-native": "0.80.1",
     "react-native-gesture-handler": "^2.27.2",
+    "react-native-paper": "^5.14.5",
     "react-native-reanimated": "^3.19.0",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
-    "react-native-vector-icons": "^10.2.0",
+    "react-native-vector-icons": "^10.3.0",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
