--- a/MobileApp/package.json
+++ b/MobileApp/package.json
@@ -12,12 +12,13 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/cli": "latest",
-    
     "@react-native/new-app-screen": "0.80.1",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "@react-navigation/stack": "^7.4.2",
+    "@rn-primitives/dropdown-menu": "^1.2.0",
+    "@rn-primitives/slot": "^1.2.0",
     "axios": "^1.10.0",
     "react": "19.1.0",
     "react-native": "0.80.1",
